tests/build/fail/widget_new/when_missing_block.stderr
error: expected a block of property assigns
 --> $DIR/when_missing_block.rs:6:19
  |
6 |         when self.is_pressed
  |                   ^^^^^^^^^^

warning: unused import: `zero_ui::properties::states::is_pressed`
 --> $DIR/when_missing_block.rs:1:5
  |
1 | use zero_ui::properties::states::is_pressed;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
